--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,14 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
+  - pages/projects.html
   - documentation/partials/**                           # For Documentation Only
 
 
 ### Author Info ###
 author:
   name              : Pratik Gawade
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : /assets/img/profile.jpg
   behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
