--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Pratik Gawade
-  image             : Pratikgawade.github.io/assets/img/profile.jpg
+  image             : https://ca.slack-edge.com/T03AE70CN-U02JWAJU2Q2-7730b9815f13-512
   behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
