--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Pratik Gawade
-  image             : pages/assets/img/docker.jpeg
+  image             : pages/assets/img/profile.jpg
   behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
