--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 ### Site Settings ###
 title               : Pratik Gawade
-description         : >-
+description         : >- 
                       I turn coffee :coffee: into code,
                       use tabs over spaces
-                      and never broke production.
+                      and never broke production.<br><br>
+                      Check out my <a href='http://127.0.0.1:4000/aboutme/'>Portfolio</a>
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : PratikGawade/Pratikgawade.github.io    # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
@@ -27,7 +28,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Pratik Gawade
-  image             : pages/assets/img/profile1.jpeg
+  image             : pages/assets/img/profile.jpg
   behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
