--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
                       and never broke production.<br><br>
-                      Check out my <a href='https://pratikgawade.me/aboutme/'>Portfolio</a>
+                      Check out my <a href='https://pratikgawade.github.io/aboutme/'>Portfolio</a>
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : PratikGawade/Pratikgawade.github.io    # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
